production.css; tweak; Forced table1 font-family to be the same as the rest of the HTML document

--- a/production.css
+++ b/production.css
@@ -173,6 +173,9 @@ p.abstract:after {
     font-weight: 800;
 }
 
+
+table.Rtable1 { font-family:  Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;}
+
 @media print {
   #TOC { display: none;}
 
