production.css; format; Partly succeeded in margin notes on CSS-side, but not readable due to running together, so for now just setting them to 'display: none' until time permits

--- a/production.css
+++ b/production.css
@@ -156,6 +156,21 @@ p.abstract:after {
     text-justify: inter-character;
 }
 
+.comment-start {
+  background-color: #FFB;
+  display:  none;
+  float: right;
+  position: relative;
+  width: 18vw;
+  margin-right: -19vw;
+  /* The following were attempts to fix comments running into each other
+  margin-top: -5vw;
+  margin-bottom: -5vw;
+  overflow-y: scroll;
+  font-size: x-small;
+  */
+}
+
 .note2self {
   background-color: #FF0;
 }
@@ -163,6 +178,7 @@ p.abstract:after {
 .note2team {
   background-color: #FCC;
 }
+
 
 .table caption {
     color: #777;
